Second patch from MIM4J-5 https://issues.apache.org/jira/browse/MIME4J-5. Contributed by Oleg Kalnichevski. Factors out an abstract superclass and interface for pull parser state machine. This will ease the creation of alternatives to MimeTokenStream. Factors state constants into separate classes to improve readability. Removes Cursor. This was originally added to allow first class support for nio. The design cost of this abstract is higher than the likely performance gain.
git-svn-id: https://svn.apache.org/repos/asf/james/mime4j/trunk@674206 13f79535-47bb-0310-9956-ffa450edef68